--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>spring-ws</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-ws</name>
-    <description>Demo project for Spring Boot</description>
+    <description>This project consumes a soap service </description>
     <properties>
         <java.version>11</java.version>
     </properties>
@@ -37,6 +37,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+        <!-- JAXB RI -->
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.4</version>
         </dependency>
     </dependencies>
 
